packages/compiler/tests/snapshots/sfc_split__split_extra_whitespace.snap
---
source: packages/compiler/tests/sfc_split.rs
expression: result
---
AihuSource {
    file_path: None,
    script: Some(
        "const y = 2",
    ),
    script_line: 5,
    template: Some(
        "<p>text</p>",
    ),
    template_line: 12,
    template_column: 2,
    style: None,
    meta: ScriptMeta {
        name: None,
    },
    agent: None,
    route: None,
    stream: None,
    sfc_meta: None,
}
