packages/compiler/tests/snapshots/sfc_split__split_missing_script.snap
---
source: packages/compiler/tests/sfc_split.rs
expression: result
---
AihuSource {
    file_path: None,
    script: None,
    script_line: 0,
    template: Some(
        "<span>hello</span>",
    ),
    template_line: 2,
    template_column: 2,
    style: None,
    meta: ScriptMeta {
        name: None,
    },
    agent: None,
    route: None,
    stream: None,
    sfc_meta: None,
}
