packages/compiler/tests/snapshots/sfc_split__split_missing_template.snap
---
source: packages/compiler/tests/sfc_split.rs
expression: result
---
AihuSource {
    file_path: None,
    script: Some(
        "const x = 1",
    ),
    script_line: 2,
    template: None,
    template_line: 0,
    template_column: 0,
    style: None,
    meta: ScriptMeta {
        name: None,
    },
    agent: None,
    route: None,
    stream: None,
    sfc_meta: None,
}
