packages/compiler/tests/snapshots/sfc_split__split_style_only.snap
---
source: packages/compiler/tests/sfc_split.rs
expression: result
---
AihuSource {
    file_path: None,
    script: None,
    script_line: 0,
    template: None,
    template_line: 0,
    template_column: 0,
    style: Some(
        StyleBlock {
            content: "body { margin: 0; }",
            scope: Scoped,
        },
    ),
    meta: ScriptMeta {
        name: None,
    },
    agent: None,
    route: None,
    stream: None,
    sfc_meta: None,
}
