packages/compiler/tests/snapshots/sfc_split__split_valid_full.snap
---
source: packages/compiler/tests/sfc_split.rs
expression: result
---
AihuSource {
    file_path: None,
    script: Some(
        "import { signal } from '@aihu/signals'\n\nconst [count, setCount] = signal(0)",
    ),
    script_line: 2,
    template: Some(
        "<div>{{ count }}</div>",
    ),
    template_line: 8,
    template_column: 2,
    style: Some(
        StyleBlock {
            content: "div { color: red; }",
            scope: Scoped,
        },
    ),
    meta: ScriptMeta {
        name: None,
    },
    agent: None,
    route: None,
    stream: None,
    sfc_meta: None,
}
